Changes in CXAdminForms, EditStatus New files added - [wm-xss-policies.json] Files modified - [Main.html,CXAdmin.html,project-security.xml,EditForm.html,securityService.properties,deployment.properties,wm-xss-policies.xml,development.properties]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -14,3 +14,4 @@ security.general.ssl.enabled=false
 security.general.ssl.port=443
 security.general.xsrf.enabled=false
 security.general.xss.enabled=false
+security.providers=DATABASE
