--- a/services/securityService/src/securityService.properties
+++ b/services/securityService/src/securityService.properties
@@ -6,3 +6,4 @@ general.ssl.enabled=${security.general.ssl.enabled}
 general.ssl.port=${security.general.ssl.port}
 general.xsrf.enabled=${security.general.xsrf.enabled}
 general.xss.enabled=${security.general.xss.enabled}
+providers=${security.providers}
