--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -14,3 +14,4 @@ security.general.ssl.enabled=false
 security.general.ssl.port=443
 security.general.xsrf.enabled=false
 security.general.xss.enabled=false
+security.providers=DATABASE
