- Disabling XSS protection for now Files modified - [NewForm.variables.json,general-options.json,EditForm.js,project-security.xml,wm-xss-policies.json,NewForm.html,wm-xss-policies.xml,development.properties,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -197,6 +197,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserStatistics",
   "type" : "PAGE",
   "params" : [ ]
