--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -21,5 +21,5 @@ security.general.session.timeout=30
 security.general.ssl.enabled=false
 security.general.ssl.port=443
 security.general.xsrf.enabled=true
-security.general.xss.enabled=true
+security.general.xss.enabled=false
 security.providers=DATABASE
